Floated articles to the right to avoid shorter titles from wrapping

--- a/_sass/sections/_index.scss
+++ b/_sass/sections/_index.scss
@@ -55,7 +55,9 @@
 		.latest-articles {
 			width: 90%;
 			line-height: 1;
+			clear: both;
 			.single-article {
+				float: right;
 				display: inline-block;
 				padding-bottom: 1rem;
 				&:hover {
